# FX-Kline

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  HITL_Trading_System.md  README.md  README_EN.md  SOW.md  TODO.md  claude_desktop_config.example.json  consolidate_summaries.py  debug_actual_fetch.py  debug_fetch.py  debug_trimming_logic.py  download_latest_summaries.ps1  main.py  ohlc_aggregator.py  pyproject.toml  run_mcp_server.py  test_3fetch_issue.py  test_actual_fetch.py  test_comprehensive.py  test_fetch.py  test_fx_business_days.py  test_gold_issue.py  test_gold_symbols.py  test_mcp_tools.py  test_other_pairs.py  test_xauusd.py  yfinace.py
.github/workflows/: README.md  daily_ohlc_analysis.yml
docs/: ACADEMIC_VALUE.md  CONTENT_STRATEGY.md  HITL_SYSTEM_ADVICE.md  IMPLEMENTATION_GUIDE.md  JST_CONVERSION_VERIFICATION.md  L3_EVALUATION_GUIDE.md  L3_prompt_v1.md  L3_prompt_v2.md  MCP_SETUP.md  MIGRATION.md  README.md  memo.md  temprate.html
scripts/: __init__.py  archive_ohlc_for_day.py  prepare_daily_data.py  run_l3_evaluation.py
scripts/debug/: debug_actual_fetch.py  debug_fetch.py  debug_jst_conversion.py  debug_trimming_logic.py  yfinance.py  yfinance_debug.py
summary_reports/: AUDJPY_summary.json  AUDUSD_summary.json  EURJPY_summary.json  EURUSD_summary.json  GBPJPY_summary.json  USDJPY_summary.json  XAUUSD_summary.json
tests/: test_archive_ohlc_for_day.py  test_data_manager.py  test_l3_evaluation.py  test_mcp_tools.py  test_ohlc_aggregator.py  test_prepare_daily_data.py  test_summary_consolidator.py  test_support_resistance.py
(+37 files in other folders)
