[project]
name = "fx-kline"
version = "0.1.0"
description = "FX OHLC data fetching tool with Streamlit UI and MCP server support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.66",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "streamlit>=1.28.0",
    "pytz>=2023.3",
    "mcp>=0.9.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=0.9.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
default-groups = ["dev"]
